chore(CHANGELOG.md): update changelog for ZaDark 23.6.3 fix(zadark.scss): fix color of unread messages in dark mode

--- a/src/core/scss/zadark.scss
+++ b/src/core/scss/zadark.scss
@@ -1148,8 +1148,11 @@ html[data-zadark-theme="dark"] {
       background-color: var(--WA100);
     }
 
-    .conv-action__unread .conv-unread {
-      color: #fff !important;
+    .conv-action__unread,
+    .conv-action__unread-v2 {
+      .conv-unread {
+        color: #fff !important;
+      }
     }
 
     .conv-item {
